--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>com.sobart.tasks</groupId>
     <artifactId>tasks</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <icu4j.version>64.1</icu4j.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -19,6 +24,12 @@
             </plugin>
         </plugins>
     </build>
-
-
+    <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.ibm.icu/icu4j -->
+    <dependency>
+        <groupId>com.ibm.icu</groupId>
+        <artifactId>icu4j</artifactId>
+        <version>${icu4j.version}</version>
+    </dependency>
+    </dependencies>
 </project>
